--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "node lib/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require test/setup.js test/unit/** --recursive"
   },
   "author": "Sebastian Andreasson",
   "license": "ISC",
   "dependencies": {
     "sha256": "^0.2.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5"
   }
 }
